# blender-playblast

./: .gitignore  README.md  README.zh-CN.md  README_CN.md  build.bat  pyproject.toml
anim_reviewer/: blender_manifest.toml  handlers.py  metadata.py  operators.py  panels.py  paths.py  properties.py  translations.py  utils.py
locales/: blender.pot  zh_HANS.po
playblast/: __init__.py  blender_manifest.toml  callback.py  handlers.py  metadata.py  operators.py  panels.py  paths.py  properties.py  render.py  template.ass  text.py  translations.py  utils.py
