[project]
name = "blender-anim-reviewer"
version = "1.0.0"
description = "Enhance blender playblast capabilities for animation review"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fonttools>=4.60.1",
]

[dependency-groups]
dev = [
    "bpy>=4.5",
    "fake-bpy-module>=20251003",
]
